--- a/Data-Preprocessing-Project-Dealing-with-Missing-Numerical-Values/Data Preprocessing Project - Dealing with Missing Numerical Values.ipynb
+++ b/Data-Preprocessing-Project-Dealing-with-Missing-Numerical-Values/Data Preprocessing Project - Dealing with Missing Numerical Values.ipynb
@@ -102,8 +102,9 @@
    "source": [
     "# Import the dataset\n",
     "\n",
-    
-    "df = pd.read_csv("https://raw.githubusercontent.com/sameerCoder/Final-Data-science-Projects/main/Data-Preprocessing-Project-Dealing-with-Missing-Numerical-Values/wiki4HE.csv", sep = ';')"
+    "dataset = \"C:/project_datasets/wiki4HE.csv\"\n",
+    "\n",
+    "df = pd.read_csv(dataset, sep = ';')"
    ]
   },
   {
